; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_rdp.c_rdp_send_control.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_rdp.c_rdp_send_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RDP_DATA_PDU_CONTROL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @rdp_send_control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rdp_send_control(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = call i32 @rdp_init_data(i32 8)
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @out_uint16_le(i32 %5, i32 %6)
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @out_uint16(i32 %8, i32 0)
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @out_uint32(i32 %10, i32 0)
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @s_mark_end(i32 %12)
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @RDP_DATA_PDU_CONTROL, align 4
  %16 = call i32 @rdp_send_data(i32 %14, i32 %15)
  ret void
}

declare dso_local i32 @rdp_init_data(i32) #1

declare dso_local i32 @out_uint16_le(i32, i32) #1

declare dso_local i32 @out_uint16(i32, i32) #1

declare dso_local i32 @out_uint32(i32, i32) #1

declare dso_local i32 @s_mark_end(i32) #1

declare dso_local i32 @rdp_send_data(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
